k8s/ingress/ingress-client.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-client
  namespace: client
  annotations:
    # kubernetes.io/ingress.class: azure/application-gateway
    # appgw.ingress.kubernetes.io/health-probe-path: "/actuator/health"
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-svc
            port:
              number: 80
