k8s/ingress/ingress-svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myHealth-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /client
        pathType: Prefix
        backend:
          service:
            name: client-svc
            port:
              number: 80
      - path: /server
        pathType: Prefix
        backend:
          service:
            name: server-svc
            port:
              number: 80
